# main.go
@@ -11,7 +11,6 @@ import (
 	"go-api-sooon/approuter"
 	"go-api-sooon/config"
 	"go-api-sooon/member"
-	m "go-api-sooon/myplayground"
 	"log"
 	"net/http"
 	"os"
@@ -23,13 +22,22 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 
-	_ "github.com/joho/godotenv/autoload"                // 環境變數套件os.Getenv
-	_ "github.com/swaggo/gin-swagger/example/basic/docs" // docs is generated by Swag CLI, you have to import it.
+	_ "go-api-sooon/docs" // docs is generated by Swag CLI, you have to import it.
+
+	_ "github.com/joho/godotenv/autoload" // 環境變數套件os.Getenv
 )
 
 // mainCodePrefix 錯誤代碼追蹤
 const mainCodePrefix = "MA00"
 
+// @title sooon api
+// @version 1.0
+// @description sooon api doc
+// @schemes http
+// @host localhost:3000
+// @contact.name sooon
+// @host 127.0.0.1:3000
+// @BasePath /dev
 func main() {
 	// PLAYGROUND TEST YOUR CODE
 	approuter.GinRouterGroup.GET("/playground", playground)
@@ -37,16 +45,18 @@ func main() {
 
 	// swagger Doc router
 	if mode := gin.Mode(); mode == gin.DebugMode {
-
-		url := ginSwagger.URL("http://localhost:8080/swagger/doc.json")
+		// debug模式才會開啟CORS模式
+		approuter.GinRouterGroup.Use(config.CORSMiddleware())
+		url := ginSwagger.URL("http://localhost:3000/dev/swagger/doc.json") // dev才有的路由
 		approuter.GinRouterGroup.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
+
 	}
 	// MARK: dev
 	// APP 打開APP先打這支認證 過了APP才能去要JWT token
 	approuter.GinRouterGroup.POST("/init", func(c *gin.Context) {
 		s := c.PostForm("hash")
 		if s != app.SFunc.APIAuthorized() {
-			c.JSON(http.StatusUnauthorized, gin.H{
+			c.JSON(http.StatusOK, gin.H{
 				"s":       -9,
 				"errCode": app.SFunc.DumpErrorCode(mainCodePrefix),
 				"errMsg":  "unauthorized",
@@ -110,22 +120,31 @@ func main() {
 	}
 }
 
-// PLAYGROUND TEST YOUR CODE
+// @Summary Playground API
+// @Tags Test
+// @version 1.0
+// @produce application/json
+// @Success 200 "{"s":1}"
+// @host localhost:3000
+// @Router /playground [get]
 func playground(c *gin.Context) {
+
 	// ip := net.ParseIP("2001:db8::68")
 	// bint := ipv6ToInt(ip)
 	// fmt.Println(net.IPv4(byte("192"), byte("192"), byte("192"), byte("192")))
 
 	// 陣列值2個數字相加等於4 且是唯一解
-	// r := m.TwoSum([]int{3, 4, 1, 2}, 4)
+	// r := my.TwoSum([]int{3, 4, 1, 2}, 4)
 	// fmt.Println(r)
 
 	// 陣列反轉
-	m.Play.ArrReverse([]int{6, 4, 3, 1})
+	// {
+	// 	my.Play.ArrReverse([]int{6, 4, 3, 1})
+	// }
 
 	// 費式數列
 	// for i := 0; i < 20; i++ {
-	// 	app.DumpAnyLikeABoss(myplay.Fibonacci1()(i))
+	// 	app.DumpAnyLikeABoss(my.Play.Fibonacci1()(i))
 	// }
 
 	// store := cookie.NewStore([]byte(os.Getenv("SESSION_KEY")))
@@ -140,4 +159,5 @@ func playground(c *gin.Context) {
 		"s": 1,
 	})
 	return
+
 }
